[project]
name = "marketing_posts"
version = "0.1.0"
description = "marketing-posts using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]==0.85.0",
    "crewai-tools>=0.4.6",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
]

[project.scripts]
marketing_posts = "marketing_posts.main:run"
train = "marketing_posts.main:train"
run_crew = "marketing_posts.main:run"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
